# gmath

./: CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: continuous-integration.yml
dependencies/catch2/: catch2.cmake
src/gmath/: gmath.h
src/tests/: CMakeLists.txt  gmath.cpp
